fixed a media query gap

--- a/_Global/css/main.css
+++ b/_Global/css/main.css
@@ -283,7 +283,7 @@ html, body { background-color: rgb(0,0,0); font-family: "Helvetica Neue", Helvet
     .story .copy { font-size: 32px; }
 }
 
-@media screen and (min-width: 800px) and (max-width: 1024px){
+@media screen and (min-width: 768px) and (max-width: 1024px){
     .nav-container span.slash {padding:0 10px 0 10px;}
     .story .copy { font-size: 32px; }
 
